add new feature scroll button up + fix slider + fix sideBar + still work...

--- a/src/styles/CardPreview.module.scss
+++ b/src/styles/CardPreview.module.scss
@@ -71,8 +71,9 @@
 
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
-.containerImage {
-  height: 300px;
-  max-width: 300px;
-}
+  .containerImage {
+    height: 300px;
+    max-width: 300px;
+    margin: 0 auto;
+  }
 }
