--- a/src/styles/ModalUniversal.module.scss
+++ b/src/styles/ModalUniversal.module.scss
@@ -33,6 +33,13 @@
   right: -20px;
 }
 
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+}
+
 
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
