--- a/src/styles/ProductPreview.module.scss
+++ b/src/styles/ProductPreview.module.scss
@@ -29,11 +29,12 @@
 }
 
 .containerInner {
-  padding: 30px 0;
+  margin: 30px 0 0 0;
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto auto;
   column-gap: 30px;
+  row-gap: 10px;
   color: $greyColor;
 }
 
@@ -41,14 +42,14 @@
   grid-column: 1/2;
   grid-row: 1/3;
   max-width: 500px;
-  height: 500px;
+  // height: 500px;
 }
 
 .noImage {
   grid-column: 1/2;
   grid-row: 1/3;
   width: 400px;
-  height: 400px;
+  // height: 400px;
 }
 
 .blockInfo {
@@ -69,7 +70,6 @@
 
 .descriptionTitle {
   letter-spacing: 1px;
-  margin: 0 0 8px 0;
   font-weight: 600;
 }
 
@@ -172,7 +172,7 @@
   min-height: calc(100vh - 160px);
   max-width: 1280px;
   margin: 0 auto;
-  padding: 30px 21px;
+  padding: 21px;
 }
 
 .buttonBack {
@@ -185,15 +185,15 @@
 .containerInner {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto 250px auto;
-
+  grid-template-rows: auto;
+  margin: 21px 0 40px 0;
 }
 
 .blockImage {
   grid-column: 1/1;
   grid-row: 1/2;
-  max-width: 333px;
-  max-height: 365px;
+  max-width: 330px;
+  // max-height: 365px;
   margin: 0 auto;
   position: relative;
 }
@@ -202,8 +202,9 @@
   grid-column: 1/1;
   grid-row: 1/2;
   max-width: 355px;
-  max-height: 370px;
+  // max-height: 370px;
   margin: 0 auto;
+  position: relative;
 }
 
 .blockInfo {
@@ -214,6 +215,7 @@
   gap: 16px;
   font-weight: 600;
   font-size: 20px;
+  width: 100%;
 }
 
 .blockDescription {
@@ -223,7 +225,7 @@
 
 .descriptionTitle {
   letter-spacing: 1px;
-  margin: 0 0 8px 0;
+  margin: 0;
   font-weight: 600;
 }
 
@@ -262,11 +264,7 @@
 
 .name {
   font-size: 22px;
-  margin: 0 0 10px 0;
-  background: linear-gradient(90deg, #44b26f, #a22198 20%, #000000 57%);
-  color: transparent;
-  background-clip: text;
-  font-weight: 700;
+  margin: 0;
 }
 
 .price {
