--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -1,36 +1,118 @@
 
 @use "vars" as *;
 
-// .user {
-//   background: $bgAlt;
-//   height: calc(100vh - 210px);
+.user {
+  background: $bgAlt;
 
-//   &__container {
-//   }
+  &__container {
+    height: calc(100vh - 210px);
+    padding: 30px;
+    max-width: 1280px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+    gap: 40px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__containerInfo {
+    display: flex;
+    flex-flow: column;
+    gap: 12px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
   
-//   &__photo {
-//   }
+  &__photo {
+    width: 200px;
+    height: 200px;
+    border-radius: $radius-rounded;
+    border: $bgGreen 3px solid;
+  }
 
-//   &__image {
-
-//   }
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
   
-//   &__name {
-//   }
+  &__name {
+    font-size: 30px;
+    font-weight: 600;
+    color: $bgGreen;
+  }
 
-//   &__singOut {
-//     display: flex;
-//     align-items: center;
-//     gap: 12px;
-//     flex-direction: row-reverse;
-//     justify-content: center;
-//     padding: 10px 30px;
-//     font-size: 18px;
-//     color: $basicWhite;
-//     background: $redAccent;
-//     border-radius: $radius-md;
-//   }
-// }
+  &__email {
+    font-size: 20px;
+    font-weight: 500;
+    color: $greyColor;
+  }
+
+  &__containerButtons {
+    display: flex;
+    flex-flow: column;
+    gap: 12px;
+    text-align: center;
+    align-items: start;
+    justify-content: center;
+    width: 500px;
+  }
+
+  &__editProfile, &__editPassword {
+    background: transparent;
+    color: $greyColor;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    justify-content: left;
+    padding: 10px;
+    font-size: 18px;
+    width: 100%;
+  }
+
+  &__rightIcon {
+    color: $greyColor;
+    width: 20px;
+    height: 20px;
+    margin-left: auto;
+  }
+
+  &__divider {
+    width: 100%;
+    height: 4px;
+    background: #b3b3ba52;
+    border-radius: 4px;
+    margin: 24px 0;
+  }
+
+  &__singOut {
+    background: transparent;
+    padding: 10px 30px;
+    color: rgb(190, 7, 7);
+    border-radius: $radius-md;
+    border: $redAccent solid 2px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    justify-content: left;
+    font-size: 18px;
+  }
+
+  &__cancel, &__logOut {
+    color: $basicWhite;
+    font-weight: 600;
+    padding: 10px 50px;
+    background: silver;
+    border-radius: $radius-md;
+  }
+
+  &__logOut {
+    background: $redAccent;
+  }
+}
 
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
@@ -134,25 +216,16 @@
       font-size: 18px;
     }
 
-    &__modal {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 12px;
-    }
-
     &__cancel, &__logOut {
-      padding: 10px 20px;
-      background: transparent;
-      color: $greyColor;
-      border-radius: $radius-md;
-      border: $greyColor solid 2px;
+      color: $basicWhite;
       font-weight: 600;
+      padding: 10px 20px;
+      background: silver;
+      border-radius: $radius-md;
     }
-
+  
     &__logOut {
-      color: rgb(190, 7, 7);
-      border: $redAccent solid 2px;
+      background: $redAccent;
     }
   }
 }
