--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -15,7 +15,6 @@
 .swiper-slide {
   max-width: 500px;
   max-height: 510px;
-  margin-bottom: 10px;
 }
 
 .swiper-button-next,
@@ -24,6 +23,7 @@
   width: 50px;
   height: 50px;
   transform: translateY(-50%);
+  // transform: translateY(-35%);
   border-radius: 50%;
   background: #fafaf6dc;
 }
@@ -36,6 +36,7 @@
 .swiper-pagination {
   position: static;
   text-align: center;
+  margin-top: 15px;
 }
 
 .swiper-pagination-bullet {
@@ -45,49 +46,12 @@
 }
 
 // MOBILE ---------------------------------------------------------------
-@media (max-width: 375px) {
-  .swiper {
-    position: static;
-  }
-
-  .swiper-slide {
-    max-width: 360px;
-    max-height: 385px;
-    margin-bottom: 10px;
-  }
-
-  .swiper-button-next {
-    right: -15px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 5;
-    background: #EDEDF7;
-  }
-
-  .swiper-button-prev {
-    left: -15px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 5;
-    background: #EDEDF7;
-  }
-}
-
-
 @media (max-width: 425px) {
   .swiper {
     position: static;
   }
 
-  .swiper-slide {
-    max-width: 360px;
-    max-height: 385px;
-    margin-bottom: 10px;
-  }
-
-  .swiper-button-next {
+  .swiper-button-next, .swiper-button-prev {
     right: -25px;
     position: absolute;
     top: 50%;
@@ -98,10 +62,5 @@
 
   .swiper-button-prev {
     left: -25px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 5;
-    background: #EDEDF7;
   }
 }
