--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -5,15 +5,15 @@
   background: $bgAlt;
 
   &__container {
-    height: calc(100vh - 210px);
-    padding: 30px;
+    min-height: 100vh;
+    padding: 50px 30px 30px;
     max-width: 1280px;
     margin: 0 auto;
     display: flex;
     flex-flow: column;
     gap: 40px;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   &__containerInfo {
@@ -25,35 +25,57 @@
     justify-content: center;
     width: 100%;
   }
+
+  &__blockImage {
+    position: relative;
+  }
+
+  &__status {
+      position: absolute;
+      bottom: 10px;
+      right: 15px;
+      width: 40px;
+      height: 40px;
+      border-radius: $radius-rounded;
+      background: $bgAlt;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+
+  &__dottedOnline, &__dottedOffline {
+    width: 30px;
+    height: 30px;
+    border-radius: $radius-rounded;
+    background: $bgGreen;
+  }
+
+  &__dottedOffline {
+    background: $redAccent;
+  }
   
-  &__photo {
+  &__photo, &__photo_admin, &__photo_moderator {
     width: 200px;
     height: 200px;
     border-radius: $radius-rounded;
     border: $bgGreen 3px solid;
     overflow: hidden;
+  }
 
-    &_admin {
-      width: 200px;
-      height: 200px;
-      border-radius: $radius-rounded;
-      border: $valueColor 3px solid;
-      overflow: hidden;
-    }
+  &__photo_admin {
+    border: $valueColor 3px solid;
+    box-shadow: 0 0 20px $valueColor;
+  }
 
-    &_moderator {
-      width: 200px;
-      height: 200px;
-      border-radius: $radius-rounded;
-      border: $orangeApple 3px solid;
-      overflow: hidden;
-    }
+  &__photo_moderator {
+    border: $orangeApple 3px solid;
+    box-shadow: 0 0 20px $orangeApple;
   }
 
   &__image {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
   }
 
   &__info {
@@ -62,22 +84,18 @@
     gap: 5px;
   }
   
-  &__name {
+  &__name, &__name_admin, &__name_moderator {
     font-size: 30px;
     font-weight: 600;
     color: $bgGreen;
+  }
 
-    &_admin {
-      font-size: 30px;
-      font-weight: 600;
-      color: $valueColor;
-    }
+  &__name_admin {
+    color: $valueColor;
+  }
 
-    &_moderator {
-      font-size: 30px;
-      font-weight: 600;
-      color: $orangeApple;
-    }
+  &__name_moderator {
+    color: $orangeApple;
   }
 
   &__slash {
@@ -108,7 +126,7 @@
     width: 500px;
   }
 
-  &__editProfile, &__editPassword {
+  &__editProfile, &__editPassword, &__editUsers {
     background: transparent;
     color: $greyColor;
     display: flex;
@@ -139,7 +157,8 @@
   &__singOut {
     background: transparent;
     padding: 10px 30px;
-    color: rgb(190, 7, 7);
+    color: $redAccent;
+    font-weight: 500;
     border-radius: $radius-md;
     border: $redAccent solid 2px;
     display: flex;
@@ -172,115 +191,35 @@
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
   .user {
-    background: $bgAlt;
-  
+
     &__container {
-      height: calc(100vh - 160px);
-      padding: 30px;
-      max-width: 1280px;
-      margin: 0 auto;
-      display: flex;
-      flex-flow: column;
-      gap: 40px;
-      align-items: center;
-      justify-content: center;
+      padding: 50px 21px 30px;
     }
 
     &__containerInfo {
-      display: flex;
-      flex-flow: column;
-      gap: 12px;
-      text-align: center;
-      align-items: center;
-      justify-content: center;
       width: 100%;
-    }
-    
-    &__photo {
-      width: 160px;
-      height: 160px;
-      border-radius: $radius-rounded;
-      border: $bgGreen 3px solid;
-    }
-  
-    &__image {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-    
-    &__name {
-      font-size: 30px;
-      font-weight: 600;
-      color: $bgGreen;
     }
 
-    &__email {
-      font-size: 20px;
-      font-weight: 500;
-      color: $greyColor;
+    &__status {
+      bottom: 5px;
+      right: 10px;
+    }
+    
+    &__photo, &__photo_admin, &__photo_moderator {
+      width: 160px;
+      height: 160px;
+    }
+    
+    &__name, &__name_admin, &__name_moderator, &__slash, &__role {
+      font-size: 25px;
     }
 
     &__containerButtons {
-      display: flex;
-      flex-flow: column;
-      gap: 12px;
-      text-align: center;
-      align-items: start;
-      justify-content: center;
       width: 100%;
-    }
-
-    &__editProfile, &__editPassword {
-      background: transparent;
-      color: $greyColor;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      justify-content: left;
-      padding: 10px;
-      font-size: 18px;
-      width: 100%;
-    }
-
-    &__rightIcon {
-      color: $greyColor;
-      width: 20px;
-      height: 20px;
-      margin-left: auto;
-    }
-
-    &__divider {
-      width: 100%;
-      height: 4px;
-      background: #b3b3ba52;
-      border-radius: 4px;
-      margin: 24px 0;
-    }
-
-    &__singOut {
-      background: transparent;
-      padding: 10px 30px;
-      color: rgb(190, 7, 7);
-      border-radius: $radius-md;
-      border: $redAccent solid 2px;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      justify-content: left;
-      font-size: 18px;
     }
 
     &__cancel, &__logOut {
-      color: $basicWhite;
-      font-weight: 600;
       padding: 10px 20px;
-      background: silver;
-      border-radius: $radius-md;
-    }
-  
-    &__logOut {
-      background: $redAccent;
     }
   }
 }
