--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -1,12 +1,5 @@
 .login {
-  min-height: calc(100vh - 210px);
+  min-height: 100vh;
   background: #44B26F;
   position: relative;
-}
-
-// MOBILE ---------------------------------------------------------------
-@media (max-width: 425px) {
-  .login {
-    min-height: calc(100vh - 160px);
-  }
 }
