--- a/src/styles/CardPreview.module.scss
+++ b/src/styles/CardPreview.module.scss
@@ -15,7 +15,7 @@
 
 .card:hover {
   transform: scale(1.1);
-  box-shadow: 1px 1px 12px black;
+  box-shadow: 0 0 12px black;
 }
 
 .containerImage {
