--- a/src/styles/Error.module.scss
+++ b/src/styles/Error.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: calc(100vh - 210px);
+  min-height: 100vh;
   background: $bgGreen;
   align-items: center;
 
@@ -22,8 +22,6 @@
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
   .Error {
-    min-height: calc(100vh - 160px);
-    
     .description {
       font-size: 28px;
     }
