--- a/src/styles/ProductPreview.module.scss
+++ b/src/styles/ProductPreview.module.scss
@@ -8,7 +8,7 @@
 }
 
 .wrapper {
-  min-height: calc(100vh - 210px);
+  min-height: 100vh;
   max-width: 1280px;
   margin: 0 auto;
   padding: 30px;
@@ -42,14 +42,12 @@
   grid-column: 1/2;
   grid-row: 1/3;
   max-width: 500px;
-  // height: 500px;
 }
 
 .noImage {
   grid-column: 1/2;
   grid-row: 1/3;
   width: 400px;
-  // height: 400px;
 }
 
 .blockInfo {
@@ -139,7 +137,7 @@
 }
 
 .error {
-  min-height: calc(100vh - 210px);
+  min-height: 100vh;
   position: relative;
   background-color: $bgGreen;
 }
@@ -169,9 +167,6 @@
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
 .wrapper {
-  min-height: calc(100vh - 160px);
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 21px;
 }
 
@@ -193,7 +188,6 @@
   grid-column: 1/1;
   grid-row: 1/2;
   max-width: 330px;
-  // max-height: 365px;
   margin: 0 auto;
   position: relative;
 }
@@ -202,7 +196,6 @@
   grid-column: 1/1;
   grid-row: 1/2;
   max-width: 355px;
-  // max-height: 370px;
   margin: 0 auto;
   position: relative;
 }
@@ -223,83 +216,8 @@
   grid-row: 3/3;
 }
 
-.descriptionTitle {
-  letter-spacing: 1px;
-  margin: 0;
-  font-weight: 600;
-}
-
-.descriptions {
-  line-height: 1.5em;
-  font-weight: 400;
-  max-height: 12em;
-  overflow: hidden;
-}
-
-.descriptionsFull {
-  line-height: 1.5em;
-  font-weight: 400;
-  max-height: none;
-  overflow: visible;
-}
-
-.buttonMore {
-  color: #44b26f;
-  font-size: 16px;
-  font-weight: 400;
-  background: transparent;
-  transition: linear .2s;
-  text-decoration: 1px transparent underline;
-  cursor: pointer;
-  text-align: left;
-}
-
-.buttonMore:hover {
-  text-decoration: 1px underline;
-}
-
-.spanTitle {
-  font-weight: 400;
-}
-
 .name {
   font-size: 22px;
-  margin: 0;
-}
-
-.price {
-  color: coral;
-}
-
-.storage {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  color: #44b26f;
-}
-
-.quantity {
-  font-weight: 400;
-  color: #726969;
-}
-
-.storageZero {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  color: #f42652;
-}
-
-.error {
-  min-height: calc(100vh - 160px);
-}
-
-.errorBox {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  text-align: center;
 }
 
 .errorLogo {
