--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -59,6 +59,7 @@
     height: 200px;
     border-radius: $radius-rounded;
     border: $bgGreen 3px solid;
+    box-shadow: 0 0 20px $bgGreen;
     overflow: hidden;
   }
 
