--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,7 +3,8 @@
 $valueColor: #8b28a7;
 $orangeApple: #e78428d2;
 $redAccent: #f0145a;
-$bgGreen: #44B26F;
+$bgGreens: #44B26F;
+$bgGreen: #2C3E50;
 $basicWhite: white;
 $basicBlack: black;
 $textColor: #B3B3BA;
@@ -11,6 +12,14 @@ $greyColor: #726969;
 $bgColor: #F5F5FA;
 $bgAlt: #EDEDF7;
 $separatorColor: #E6E6F0;
+$metal: #1A2A44;
+$softMetal: #2C3E50;
+
+$cardRed: #F9A3A3;
+$cardGreen: #8FF985;
+$cardDisable: #BBC4CD;
+$cardBuy: #0061C1;
+
 
 // RADIUS:
 $radius-sm: 8px;
