--- a/src/styles/CardLogin.module.scss
+++ b/src/styles/CardLogin.module.scss
@@ -1,22 +1,26 @@
-@use "./vars";
-
-.CardLoginContainer {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-40%);
-}
+@use "./vars" as *;
 
 .CardLogin {
-  background: #F5F5FA;
+  background: $bgAlt;
+  background: rgb(245, 245, 250, .2);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(10px);
   padding: 30px 50px 35px;
   border-radius: 12px;
-  position: relative;
   display: flex;
   flex-flow: column;
   align-items: center;
   gap: 25px;
   font-weight: 600;
+  position: relative;
+  z-index: 0;
+}
+
+.logoSpan {
+  font-weight: 900;
+  font-size: 25px;
+  color: $basicWhite;
 }
 
 .formLoginPage {
@@ -78,16 +82,6 @@
   transform: translateY(-50%);
 }
 
-.buttonEye:active {
-  transform: scale(1);
-  transform: translateY(-50%);
-}
-
-.buttonEye:focus {
-  outline: none;
-  box-shadow: none;
-}
-
 .buttonLogin {
   background-color: #44B26F;
   padding: 16px 0;
@@ -134,13 +128,6 @@
 
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
-  .CardLoginContainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-  }
-  
   .CardLogin {
     padding: 20px 15px;
   }
