--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -1,12 +1,16 @@
 @use "./vars" as *;
 
 .header {
-  background: $bgGreen;
+  background: $basicBlack;
+}
+
+.container {
+  margin: 0 auto;
   padding: 30px;
+  max-width: 1440px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: relative;
 }
 
 .navButton {
@@ -14,15 +18,80 @@
   cursor: pointer;
 }
 
+.logoLink {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+}
+
+.logoContainer {
+  width: 40px;
+  height: 40px;
+  border-radius: $radius-rounded;
+  overflow: hidden;
+}
+
+.logo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.logoSpan {
+  font-weight: 700;
+  font-size: 20px;
+  color: $separatorColor;
+}
+
+.profileContainer {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.profileLink {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+}
+
+.profileName {
+  font-weight: 700;
+  font-size: 20px;
+  color: $separatorColor;
+}
+
+.profilePicture {
+  width: 50px;
+  height: 50px;
+  border-radius: $radius-rounded;
+  overflow: hidden;
+}
+
 // MOBILE ---------------------------------------------------------------
 @media (max-width: 425px) {
-  .header {
+  .container {
     padding: 21px;
-    border-bottom: 1px solid $basicWhite;
+  }
+
+  .logoContainer {
+    width: 35px;
+    height: 35px;
+  }
+
+  .profileContainer {
+    gap: 10px;
+  }
+
+  .profileName, .logoSpan {
+    font-weight: 700;
+    font-size: 16px;
   }
   
-  .logo {
-    width: 150px;
-    height: 25px;
+  .profilePicture {
+    width: 40px;
+    height: 40px;
   }
 }
