--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -1,5 +1,10 @@
+
+@use "vars" as *;
+
 .login {
   min-height: 100vh;
-  background: #44B26F;
-  position: relative;
+  background: $metal;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
