--- a/src/styles/ScrollButton.module.scss
+++ b/src/styles/ScrollButton.module.scss
@@ -1,3 +1,4 @@
+@use "vars" as *;
 
 .scrollButton {
   position: fixed;
@@ -8,7 +9,7 @@
   width: 60px;
   height: 60px;
   z-index: 10;
-  color: #44B26F;
+  color: $bgGreen;
   transition: ease-out .2s;
   cursor: pointer;
 
@@ -18,7 +19,7 @@
   }
 
   &:hover {
-    box-shadow: #44B26F 0 0 20px;
+    box-shadow: $bgGreen 0 0 20px;
   }
 }
 
