--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -19,7 +19,7 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-  color: #44b26f;
+  color: $bgGreen;
   width: 50px;
   height: 50px;
   transform: translateY(-50%);
@@ -42,7 +42,7 @@
 .swiper-pagination-bullet {
   width: 14px;
   height: 14px;
-  background: #44b26f;
+  background: $bgGreen;
 }
 
 // MOBILE ---------------------------------------------------------------
