--- a/src/styles/CardLogin.module.scss
+++ b/src/styles/CardLogin.module.scss
@@ -20,7 +20,7 @@
 .logoSpan {
   font-weight: 900;
   font-size: 25px;
-  color: $basicWhite;
+  color: $bgAltWhite;
 }
 
 .formLoginPage {
@@ -41,9 +41,9 @@
   padding: 20px;
   font-weight: 500;
   border: none;
-  background-color: #d9d9d9;
+  background-color: $bgAltWhite;
   font-family: 'Inter';
-  color: #44B26F;
+  color: $bgGreen;
 }
 
 .passwordInput {
@@ -54,19 +54,19 @@
   font-weight: 600;
   border: none;
   font-family: 'Inter';
-  background-color: #d9d9d9;
-  color: #44B26F;
+  background-color: $bgAltWhite;
+  color: $bgGreen;
 }
 
 .loginInput::placeholder, .passwordInput::placeholder {
-  color: #44B26F;
+  color: $bgGreen;
   letter-spacing: 1px;
   font-weight: 500;
 }
 
 .loginInput:focus, .passwordInput:focus {
   outline: none; 
-  box-shadow: #44B26F 1px 0 10px;
+  box-shadow: $bgGreen 1px 0 10px;
 }
 
 .buttonEye {
@@ -82,8 +82,14 @@
   transform: translateY(-50%);
 }
 
+.iconEye {
+  fill: $bgGreen;
+  width: 30px;
+  height: 30px;
+}
+
 .buttonLogin {
-  background-color: #44B26F;
+  background-color: $cardBuy;
   padding: 16px 0;
   border-radius: 12px;
   border: none;
@@ -98,12 +104,12 @@
 
 .buttonLogin:focus {
   outline: none; 
-  box-shadow: #44B26F 1px 0 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .cardError {
   text-align: center;
-  background: #b24444;
+  background: $errorAccent;
   display: flex;
   justify-content: center;
   gap: 10px;
@@ -119,7 +125,7 @@
 
 .ErrorValid {
   font-size: 20px;
-  color: white;
+  color: $bgAlt;
   font-weight: 600;
   font-family: 'Inter';
   text-transform: uppercase;
