--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,6 +11,7 @@ $textColor: #B3B3BA;
 $greyColor: #726969;
 $bgColor: #F5F5FA;
 $bgAlt: #EDEDF7;
+$bgAltWhite: #D9D9D9;
 $separatorColor: #E6E6F0;
 $metal: #1A2A44;
 $softMetal: #2C3E50;
@@ -20,6 +21,7 @@ $cardGreen: #8FF985;
 $cardDisable: #BBC4CD;
 $cardBuy: #0061C1;
 
+$errorAccent: #b24444;
 
 // RADIUS:
 $radius-sm: 8px;
