add gitIgnore env + add unic jwt (for auth) + add new style for header + add component profiles + add table users + add status user (on\offLine) + add styles for userTable

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -68,6 +68,7 @@
   height: 50px;
   border-radius: $radius-rounded;
   overflow: hidden;
+  background: $bgAltWhite;
 }
 
 // MOBILE ---------------------------------------------------------------
